fix carousel on mobile view

--- a/Assets/template/Assets/css/components/_mediaqueries.scss
+++ b/Assets/template/Assets/css/components/_mediaqueries.scss
@@ -36,7 +36,7 @@
     }
     .main-carousel{
         .carousel-item{
-            height: 500px;
+            height: 400px;
             .carousel-info{
                 //min-width: 350px;
                 h2{
